<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav_title" />
    <item
        android:id="@id/recorder"
        android:icon="@drawable/ic_mic_nav_bar"
        android:title="@string/recorder_nav_title" />
    <item
        android:id="@id/account"
        android:icon="@drawable/ic_account"
        android:title="@string/account_nav_title" />
</menu>
