<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recorderViewModel"
            type="berlin.eloquent.eloquentandroid.main.recorder.RecorderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recorder_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        tools:context="berlin.eloquent.eloquentandroid.recorder.RecorderFragment">

        <TextView
            android:id="@+id/timeCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="100dp"
            android:text="@{recorderViewModel.timeCodeText}"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/timeCodeSize"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="00:00" />

        <ImageButton
            android:id="@+id/startStopRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_border"
            android:onClick="@{() -> recorderViewModel.controlStartStopRecording()}"
            android:padding="8dp"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/recorder_startStop" />

        <ImageButton
            android:id="@+id/navigate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_border"
            android:contentDescription="@string/recorder_arrowRight"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_forward"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/startStopRecording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/recorder_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/timeCodeSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
