...
        <variable
            name="feedbackViewModel"
            type="berlin.eloquent.eloquentandroid.main.feedback.FeedbackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedback_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        tools:context="berlin.eloquent.eloquentandroid.feedback.FeedbackFragment">

        <TextView
...
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthView" />

        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@{feedbackViewModel.recording.date}"
            android:textColor="@color/colorText"
...
